--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Story template</title>
+    <title>Halo of influence</title>
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -145,7 +145,7 @@
 
         <p>The chart begins in 1998, coinciding with Destiny's Child's debut album. While the group was telling fans to "Say My Name," parents were saying Beyoncé at the hospital. The name saw a modest uptick, with about 20 babies given the name.</p>
         
-            htmlCopy<figure>
+    <figure>
     <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2023-08/230808-beyonce-mn-0600-8fa0d2.jpg" 
          alt="Beyoncé RENAISSANCE WORLD TOUR" 
          style="max-width: 100%; height: auto;">
